--- a/public/assets/css/about.css
+++ b/public/assets/css/about.css
@@ -47,7 +47,7 @@
     }
 
     .hero {
-     background: url('/assets/images/about.png') no-repeat center;
+     background: url('assets/images/about.png') no-repeat center;
      background-size: cover;
      height: 90vh;
      display: flex;
