--- a/public/assets/css/home.css
+++ b/public/assets/css/home.css
@@ -46,7 +46,7 @@ nav .join-btn {
 }
 
 .hero {
-  background: url('../assets/images/mybackground.png') no-repeat center;
+  background: url('../images/mybackground.png') no-repeat center;
   background-size: cover;
   height: 90vh;
   display: flex;
