--- a/public/assets/css/membership.css
+++ b/public/assets/css/membership.css
@@ -1,3 +1,10 @@
+body {
+  margin: 0;
+  font-family: 'Segoe UI', sans-serif;
+  background-color: #000;
+  color: white;
+}
+
 nav {
   background-color: #751111;
   display: flex;
