--- a/public/assets/css/earn_redeem.css
+++ b/public/assets/css/earn_redeem.css
@@ -36,10 +36,12 @@ nav ul li a {
   color: white;
   padding: 10px 20px;
   border: none;
-  border-radius: 5px;
   font-weight: bold;
+  border-radius: 5px;
   cursor: pointer;
+  text-decoration: none; /* make link text look like button */
 }
+
 
 .title {
   text-align: center;
@@ -84,12 +86,4 @@ nav ul li a {
   text-align: center;
 }
 
-.redeem-btn {
-  background-color: #f00;
-  color: white;
-  border: none;
-  padding: 8px 16px;
-  font-weight: bold;
-  border-radius: 6px;
-  cursor: pointer;
-}
+
