--- a/public/assets/css/trainers.css
+++ b/public/assets/css/trainers.css
@@ -31,7 +31,7 @@ nav ul li a {
   font-weight: bold;
 }
 
-nav .join-btn {
+.join-btn {
   background-color: #f00;
   color: white;
   padding: 10px 20px;
@@ -39,7 +39,9 @@ nav .join-btn {
   font-weight: bold;
   border-radius: 5px;
   cursor: pointer;
+  text-decoration: none; /* make link text look like button */
 }
+
 
 .title {
   text-align: center;
@@ -96,57 +98,5 @@ nav .join-btn {
 }
 
 
-.book-btn {
-  display: inline-block;
-  margin-top: 10px;
-  padding: 10px 20px;
-  background-color: #751111;
-  color: white;
-  text-decoration: none;
-  font-weight: bold;
-  border-radius: 8px;
-  transition: 0.3s ease;
-}
 
-.book-btn:hover {
-  background-color: #a41e1e;
-}
 
-.modal {
-  display: none;
-  position: fixed;
-  z-index: 100;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  overflow: auto;
-  background-color: rgba(0,0,0,0.7);
-}
-
-.modal-content {
-  background-color: #fff;
-  margin: 10% auto;
-  padding: 30px;
-  border-radius: 10px;
-  width: 80%;
-  max-width: 400px;
-  text-align: center;
-  color: #000;
-}
-
-.close {
-  float: right;
-  font-size: 24px;
-  cursor: pointer;
-}
-
-.confirm-btn {
-  margin-top: 15px;
-  padding: 10px 20px;
-  background-color: #751111;
-  color: white;
-  border: none;
-  border-radius: 5px;
-  font-weight: bold;
-}
