--- a/public/assets/css/contactus.css
+++ b/public/assets/css/contactus.css
@@ -13,11 +13,13 @@ body {
       padding: 20px 50px;
     }
 
-    nav .logo {
-      font-weight: bold;
-      font-size: 24px;
-      color: rgb(253, 245, 245);
-    }
+    .logo {
+  font-weight: bold;
+  font-size: 24px;
+  color: white;
+  text-decoration: none; /* Remove underline */
+}
+
 
     nav ul {
       list-style: none;
