--- a/public/assets/css/earn_redeem.css
+++ b/public/assets/css/earn_redeem.css
@@ -13,11 +13,13 @@ nav {
   padding: 20px 50px;
 }
 
-nav .logo {
+.logo {
   font-weight: bold;
   font-size: 24px;
   color: white;
+  text-decoration: none; /* Remove underline */
 }
+
 
 nav ul {
   list-style: none;
