--- a/public/assets/css/membership.css
+++ b/public/assets/css/membership.css
@@ -13,11 +13,13 @@ nav {
   padding: 40px 70px;
 }
 
-nav .logo {
+.logo {
   font-weight: bold;
   font-size: 24px;
-  color: rgb(253, 245, 245);
+  color: white;
+  text-decoration: none; /* Remove underline */
 }
+
 
 nav ul {
   list-style: none;
