--- a/public/assets/css/home.css
+++ b/public/assets/css/home.css
@@ -229,13 +229,14 @@ nav ul li a {
 
 .promo-container {
   position: relative;
-  margin: 30px auto 0;
+  margin: 50px auto 0;
   display: flex;
   flex-direction: column;
   align-items: center;
   z-index: 5;
-  top: -30px; /* move upward */
+  top: -30px;
 }
+
 
 
 
